<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/find_mentor_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/find_mentor_question"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/find_mentor_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_regular"
                    android:text="@string/find_mentor_answer"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/apply_for_tutor_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="@string/apply_for_tutor_question"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/apply_for_tutor_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_regular"
                    android:text="@string/apply_for_tutor_answer"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/more_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:text="More Information"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/email_address_schola"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/josefin_sans_regular"
                    android:text="@string/email_address_schola"
                    android:textColor="#000"
                    android:textSize="14dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_help"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_text_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="BANTUAN"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>
